tests/fixtures/invalid/pow_bool_dict_bytes.py
# Cannot call pow() with Bool, Dict[str, int], Bytes
x = pow(True, {"a": 1}, b"hello")
